# snake_ecs_game_jam_edition

./: .gitignore  .replit  TheSnake.spec  main.exe.spec  pyproject.toml  requirements.txt
.github/workflows/: build_and_release.yml  main.yml
src/: main.py
src/components/: __init__.py  direction.py  position.py  render.py  tail.py
src/entities/: entity.py
src/systems/: collision_system.py  movement_system.py  render_system.py
