[tool.poetry]
name = "Snake The Game "
version = "0.1.0"
description = "This game is developed to demonstrate how to create a game using the Entity-Component-System Architecture, serving as preparation for advanced study in game development. It is part of the 'Applied Programming' course in the 2023/24 curriculum at NTI Gymnasiet."
authors = ["KaahinAtNTI abdirahman.mohamed@ga.ntig.se"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"